# machine-learning-lab

./: .gitignore  README.md
ml-algos/: pyproject.toml
ml-algos/ml_algos/: linear_regression.py  logistic_regression.py
