[tool.poetry]
name = "ml-algos"
version = "0.1.0"
description = ""
authors = ["Vipul Maheshwari <vim.code.level@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
